feat: admin reset password and delete user APIs
